<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo"
    tools:context="com.example.computador.pruebabdonline.Vista.VistaAdmin">

    <Button
        android:id="@+id/bt_pedidos_va"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/btPedidos"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlackLight50"/>

    <Button
        android:id="@+id/bt_carta_va"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlackLight50"
        android:text="@string/btCarta" />

    <Button
        android:id="@+id/bt_empleados_va"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlackLight50"
        android:layout_marginBottom="30dp"
        android:text="@string/btEmpleados" />

    <Button
        android:id="@+id/bt_inventario_va"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlackLight50"
        android:layout_marginBottom="30dp"
        android:text="@string/btInventario" />

    <Button
        android:id="@+id/bt_restaurante_va"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlackLight50"
        android:layout_marginBottom="30dp"
        android:text="@string/btRestaurante" />
</LinearLayout>
