<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.computador.pruebabdonline.Vista.inicioSesion">

    <TextView
        android:id="@+id/tv_identificacion_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="15"
        android:text="@string/idInicioSesion"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et_identificacion_is"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginBottom="12dp"
        android:ems="15"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/tv_contraseña_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="15"
        android:text="@string/contraseñaInicioSesion"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_contraseña_is"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginBottom="12dp"
        android:ems="15"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp" />

    <Button
        android:id="@+id/bt_iniciarsesion_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:text="@string/iniciarSesionInicioSesion"
        />
</LinearLayout>
